fixed one bug(multiple links per line bug), updated junit tests, added more test cases in links.md
- added more test cases to links.md
- fixed a bug in MarkdownParse.java where it would only print one of multiple links per line
- updated junit tests

Output of Bug/Symptom:
> java MarkdownParse links.md
[www.twitter.com, www.youtube.com, www.youtube.com, ]
all links have been returned

Expected output:
> java MarkdownParse links.md
[www.twitter.com, www.youtube.com, www.reddit.com, www.youtube.com, www.reddit.com, www.somelink.com, , www.somesite.com]
all links have been returned

Note: there is still a bug/symptom. There is a "blank"/empty link spot in the returned list